--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,16 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
-  firebase_core: ^3.13.1
-  firebase_auth: ^5.5.4
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.3
+  firebase_storage: ^11.7.7
+  image_picker: ^1.1.1
+  uuid: ^4.3.3
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  http: ^1.4.0
+  flutter_map_cancellable_tile_provider: ^2.0.0
 
 dev_dependencies:
   flutter_test:
