--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   latlong2: ^0.9.0
   http: ^1.4.0
   flutter_map_cancellable_tile_provider: ^2.0.0
+  shared_preferences: ^2.2.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
