--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth: ^4.20.0
   cloud_firestore: ^4.17.3
   firebase_storage: ^11.7.7
+  intl: ^0.18.1
   image_picker: ^1.1.1
   uuid: ^4.3.3
   flutter_map: ^6.1.0
