--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_rating_bar: ^4.0.1
   cached_network_image: ^3.3.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
